# Nautilus

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
contracts/: MEMEToken.sol  PoWProof.sol
docs/: AGENT_ONBOARDING.md  AGENT_UPDATE_NOTICE.md  API_CONNECTION_FIX_REPORT.md  API配置清单.md  ARCHITECTURE_CREATION_REPORT.md  ARCHITECTURE_OVERVIEW.md  ARCHITECTURE_OVERVIEW_SUMMARY.md  BP_COMPLETION_REPORT.md  BRAINSTORMING_SESSION_2026-03-09.md  BUSINESS_PLAN.md  CLEANUP_OPTIMIZATION_REPORT.md  CLOUD_OPENCLAW_SETUP.md  COMPLETION_REPORT.md  CORE_PAPERS_FOUNDATION.md  DAILY_FINAL_SUMMARY_2026-03-10.md  DAILY_SUMMARY_2026-03-10.md  DAILY_SUMMARY_2026-03-10_CONTINUED.md  DAILY_SUMMARY_2026-03-10_FINAL.md  DEPLOYMENT_COMPLETE_REPORT_2026-03-09.md  DEPLOYMENT_ISSUE_2026-03-09.md  DEPLOYMENT_PUSH_COMPLETE.md  DEPLOYMENT_QUICK_GUIDE.md  DEPLOYMENT_REVIEW_APPROVAL.md  DEPLOYMENT_REVIEW_REQUEST.md  DEPLOYMENT_STATUS_URGENT.md  DEPLOYMENT_SUCCESS_2026-03-09.md  DEPLOYMENT_VERIFICATION_REPORT.md  DIALOG_A_SUPERPOWERS_LEARNED.md  DOCUMENT_REVIEW_REPORT.md  FAQ.md  FINAL_SUMMARY_2026-03-10-11.md  FINAL_WORK_SUMMARY_2026-03-09.md  FINAL_WORK_SUMMARY_2026-03-10-11_COMPLETE.md  FINAL_WORK_SUMMARY_2026-03-10-11_ULTIMATE.md  FINAL_WORK_SUMMARY_2026-03-10.md  FRONTEND_FIX_COMPLETE.md  FRONTEND_OLD_VERSION_DEBUG_REPORT.md  FRONTEND_TEST_COVERAGE_REPORT.md  FRONTEND_TEST_GREEN_PHASE_REPORT.md  FRONTEND_TEST_REPORT_2026-03-09.md  (+99 more)
phase3/: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_QUALITY_REPORT.md  CONTRIBUTING.md  (+19 more)
(+1114 files in other folders)
