[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nautilus-core"
version = "1.0.0"
description = "AI Agent Mining Pool System"
authors = [{name = "Nautilus Team"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nautilus*"]
exclude = ["tests*", "contracts*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "flake8>=6.0",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
